realize that none of our data points can be solved with Q learning

--- a/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
+++ b/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
@@ -2,30 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# these matrices generate SL3_Z, according to this paper: https://www.ams.org/journals/proc/1992-115-01/S0002-9939-1992-1079696-5/S0002-9939-1992-1079696-5.pdf\n",
+    "# these matrices generate SL3_Z, according to this: https://www-users.cse.umn.edu/~garrett/m/mfms/notes_2013-14/07_fund_dmn.pdf\n",
     "\n",
-    "x = np.array([[1, 0, 1], [0, -1, -1], [0, 1, 0]])\n",
-    "y = np.array([[0, 1, 0], [0, 0, 1], [1, 0, 0]])\n",
-    "z = np.array([[0, 1, 0], [1, 0, 0], [-1, -1, -1]])"
+    "# x is rank 4, so we don't need to include its inverse\n",
+    "x = np.array([[0, -1], [1, 0]])\n",
+    "y = np.array([[1, 1], [0, 1]])\n",
+    "z = np.linalg.inv(y)\n",
+    "\n",
+    "identity = np.array([[1, 0], [0, 1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1,  0],\n",
+       "       [ 0, -1]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.inv(y)\n",
+    "\n",
+    "x @ x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((y @ y == identity).all())\n",
+    "print((y @ x == identity).all())\n",
+    "print((y @ y @ y == identity).all())\n",
+    "print((y @ y @ x == identity).all())\n",
+    "print((y @ x @ y == identity).all())\n",
+    "print((y @ x @ x == identity).all())\n",
+    "print((y @ y @ y @ y == identity).all())\n",
+    "print((y @ y @ y @ x == identity).all())\n",
+    "print((y @ y @ x @ y == identity).all())\n",
+    "print((y @ y @ x @ x == identity).all())\n",
+    "print((y @ x @ y @ y == identity).all())\n",
+    "print((y @ x @ y @ x == identity).all())\n",
+    "print((y @ x @ x @ y == identity).all())\n",
+    "print((y @ x @ x @ x == identity).all())\n",
+    "\n",
+    "\n",
+    "print((x @ y == identity).all())\n",
+    "print((x @ x == identity).all())\n",
+    "print((x @ y @ y == identity).all())\n",
+    "print((x @ y @ x == identity).all())\n",
+    "print((x @ x @ y == identity).all())\n",
+    "print((x @ x @ x == identity).all())\n",
+    "print((x @ y @ y @ y == identity).all())\n",
+    "print((x @ y @ y @ x == identity).all())\n",
+    "print((x @ y @ x @ y == identity).all())\n",
+    "print((x @ y @ x @ x == identity).all())\n",
+    "print((x @ x @ y @ y == identity).all())\n",
+    "print((x @ x @ y @ x == identity).all())\n",
+    "print((x @ x @ x @ y == identity).all())\n",
+    "print((x @ x @ x @ x == identity).all())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +134,6 @@
     "    'val2': [],\n",
     "    'val3' : [],\n",
     "    'val4': [],\n",
-    "    'val5': [],\n",
-    "    'val6': [],\n",
-    "    'val7' : [],\n",
-    "    'val8': [],\n",
-    "    'val9': []\n",
     "}\n",
     "\n",
     "data = pd.DataFrame(cols)"
@@ -46,10 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "random.seed(42)\n",
+    "\n",
     "for _ in range(10000):\n",
     "\n",
     "    first_pos = np.random.randint(0, 3, size=1)[0]\n",
@@ -76,21 +173,16 @@
     "    df2 = pd.DataFrame([[\n",
     "            cur_matrix[0][0], \n",
     "            cur_matrix[0][1], \n",
-    "            cur_matrix[0][2],\n",
     "            cur_matrix[1][0], \n",
     "            cur_matrix[1][1], \n",
-    "            cur_matrix[1][2],\n",
-    "            cur_matrix[2][0], \n",
-    "            cur_matrix[2][1], \n",
-    "            cur_matrix[2][2]\n",
     "            ]],\n",
-    "            columns=['val1', 'val2', 'val3', 'val4', 'val5', 'val6', 'val7', 'val8', 'val9'])\n",
+    "            columns=['val1', 'val2', 'val3', 'val4'])\n",
     "    data = pd.concat([df2, data])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -118,73 +210,43 @@
        "      <th>val2</th>\n",
        "      <th>val3</th>\n",
        "      <th>val4</th>\n",
-       "      <th>val5</th>\n",
-       "      <th>val6</th>\n",
-       "      <th>val7</th>\n",
-       "      <th>val8</th>\n",
-       "      <th>val9</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>-13.0</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-105.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>-25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <td>-4.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>-13.0</td>\n",
+       "      <td>42.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -192,95 +254,65 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-3.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>164.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>-52.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 9 columns</p>\n",
+       "<p>10000 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    val1  val2  val3  val4  val5  val6  val7  val8  val9\n",
-       "0   -4.0  -2.0  -1.0   2.0   1.0   0.0   1.0   0.0   0.0\n",
-       "0   -1.0   0.0  -1.0  -1.0  -2.0  -2.0   1.0   1.0   2.0\n",
-       "0   -1.0  -1.0   0.0   3.0   0.0  -2.0  -1.0   0.0   1.0\n",
-       "0    0.0   1.0   2.0   1.0   1.0   0.0  -1.0  -1.0  -1.0\n",
-       "0    1.0   0.0   0.0  -1.0  -2.0  -1.0   1.0   1.0   0.0\n",
-       "..   ...   ...   ...   ...   ...   ...   ...   ...   ...\n",
-       "0    1.0   2.0   3.0   0.0  -1.0  -1.0   0.0   0.0  -1.0\n",
-       "0   -1.0  -1.0  -1.0   0.0   1.0   2.0   0.0  -1.0  -3.0\n",
-       "0   -1.0  -1.0   1.0   0.0  -1.0   1.0   1.0   2.0  -1.0\n",
-       "0    1.0   2.0   0.0   1.0  -1.0   1.0  -1.0   0.0  -1.0\n",
-       "0   -1.0  -1.0  -1.0  -1.0   0.0   0.0   2.0   1.0   0.0\n",
+       "     val1  val2  val3   val4\n",
+       "0   -11.0  -9.0  -6.0   -5.0\n",
+       "0     8.0 -13.0 -11.0   18.0\n",
+       "0    -1.0  -1.0   0.0   -1.0\n",
+       "0  -105.0  64.0  41.0  -25.0\n",
+       "0    -4.0  13.0 -13.0   42.0\n",
+       "..    ...   ...   ...    ...\n",
+       "0    -2.0  -3.0  -1.0   -2.0\n",
+       "0    -3.0   4.0  -1.0    1.0\n",
+       "0     1.0   3.0   0.0    1.0\n",
+       "0    14.0  51.0  45.0  164.0\n",
+       "0     4.0  19.0 -11.0  -52.0\n",
        "\n",
-       "[10000 rows x 9 columns]"
+       "[10000 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,20 +323,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.to_csv('sl3_Z_test.csv', index=False)"
+    "data.to_csv('./Data_files/sl2_Z.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = {\n",
+    "    'val1': [],\n",
+    "    'val2': [],\n",
+    "    'val3' : [],\n",
+    "    'val4': [],\n",
+    "}\n",
+    "\n",
+    "data = pd.DataFrame(cols)\n",
+    "\n",
+    "random.seed(59)\n",
+    "\n",
+    "for _ in range(10000):\n",
+    "\n",
+    "    first_pos = np.random.randint(0, 3, size=1)[0]\n",
+    "\n",
+    "    if first_pos==0:\n",
+    "        start_matrix = x\n",
+    "    elif first_pos==1:\n",
+    "        start_matrix=y\n",
+    "    elif first_pos==2:\n",
+    "        start_matrix=z\n",
+    "\n",
+    "    cur_matrix = start_matrix\n",
+    "\n",
+    "\n",
+    "    a = np.random.randint(0, 3, size=30)\n",
+    "    for i in a: \n",
+    "        if i==0:\n",
+    "            cur_matrix = cur_matrix @ x\n",
+    "        elif i==1:\n",
+    "            cur_matrix = cur_matrix @ y\n",
+    "        elif i==2:\n",
+    "            cur_matrix = cur_matrix @ z\n",
+    "\n",
+    "    df2 = pd.DataFrame([[\n",
+    "            cur_matrix[0][0], \n",
+    "            cur_matrix[0][1], \n",
+    "            cur_matrix[1][0], \n",
+    "            cur_matrix[1][1], \n",
+    "            ]],\n",
+    "            columns=['val1', 'val2', 'val3', 'val4'])\n",
+    "    data = pd.concat([df2, data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('./Data_files/sl2_Z_test.csv', index=False)"
    ]
   }
  ],
