rerun data generation and change nothing

--- a/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
+++ b/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,37 +22,56 @@
     "# x is rank 4, so we don't need to include its inverse\n",
     "x = np.array([[0, -1], [1, 0]])\n",
     "y = np.array([[1, 1], [0, 1]])\n",
-    "z = np.linalg.inv(y)\n",
+    "z = np.array([[1, -1], [0, 1]])\n",
     "\n",
     "identity = np.array([[1, 0], [0, 1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1,  0],\n",
-       "       [ 0, -1]])"
+       "array([[ 0, -1],\n",
+       "       [ 1,  0]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.inv(y)\n",
-    "\n",
-    "x @ x"
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1., -1.],\n",
+       "       [ 0.,  1.]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.inv(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -215,38 +234,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-11.0</td>\n",
-       "      <td>-9.0</td>\n",
-       "      <td>-6.0</td>\n",
-       "      <td>-5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>-13.0</td>\n",
-       "      <td>-11.0</td>\n",
-       "      <td>18.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-105.0</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>-25.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>3.0</td>\n",
        "      <td>-4.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>-13.0</td>\n",
-       "      <td>42.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>43.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>-33.0</td>\n",
+       "      <td>-23.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -257,38 +276,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>-16.0</td>\n",
        "      <td>-3.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-2.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>14.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>164.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>-11.0</td>\n",
-       "      <td>-52.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>-47.0</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>13.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -296,23 +315,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     val1  val2  val3   val4\n",
-       "0   -11.0  -9.0  -6.0   -5.0\n",
-       "0     8.0 -13.0 -11.0   18.0\n",
-       "0    -1.0  -1.0   0.0   -1.0\n",
-       "0  -105.0  64.0  41.0  -25.0\n",
-       "0    -4.0  13.0 -13.0   42.0\n",
-       "..    ...   ...   ...    ...\n",
-       "0    -2.0  -3.0  -1.0   -2.0\n",
-       "0    -3.0   4.0  -1.0    1.0\n",
-       "0     1.0   3.0   0.0    1.0\n",
-       "0    14.0  51.0  45.0  164.0\n",
-       "0     4.0  19.0 -11.0  -52.0\n",
+       "    val1  val2  val3  val4\n",
+       "0    0.0  -1.0   1.0   6.0\n",
+       "0   -5.0  -7.0  -2.0  -3.0\n",
+       "0    3.0  -4.0   1.0  -1.0\n",
+       "0   43.0  30.0 -33.0 -23.0\n",
+       "0    1.0   3.0   2.0   7.0\n",
+       "..   ...   ...   ...   ...\n",
+       "0    7.0 -16.0  -3.0   7.0\n",
+       "0    3.0   1.0  -4.0  -1.0\n",
+       "0   -1.0   0.0  -5.0  -1.0\n",
+       "0   -9.0  -4.0   7.0   3.0\n",
+       "0   29.0 -47.0  -8.0  13.0\n",
        "\n",
        "[10000 rows x 4 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
