hey guess what data generation was the problem because number of steps was exactly 30

--- a/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
+++ b/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "       [ 1,  0]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "       [ 0.,  1.]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,11 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "random.seed(42)\n",
+    "np.random.seed(42)\n",
     "\n",
     "for _ in range(10000):\n",
     "\n",
@@ -179,8 +180,9 @@
     "\n",
     "    cur_matrix = start_matrix\n",
     "\n",
+    "    cur_size = np.random.randint(0, 10) + 30\n",
     "\n",
-    "    a = np.random.randint(0, 3, size=30)\n",
+    "    a = np.random.randint(0, 3, size=cur_size)\n",
     "    for i in a: \n",
     "        if i==0:\n",
     "            cur_matrix = cur_matrix @ x\n",
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -234,38 +236,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>-69.0</td>\n",
+       "      <td>-398.0</td>\n",
+       "      <td>-13.0</td>\n",
+       "      <td>-75.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>-7.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>-3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>43.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>-33.0</td>\n",
-       "      <td>-23.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>-17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>-5.0</td>\n",
        "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>47.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -276,38 +278,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>-16.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>-3.0</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>-1.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>-4.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>-35.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-5.0</td>\n",
        "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-9.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>29.0</td>\n",
-       "      <td>-47.0</td>\n",
-       "      <td>-8.0</td>\n",
-       "      <td>13.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -315,23 +317,23 @@
        "</div>"
       ],
       "text/plain": [
-       "    val1  val2  val3  val4\n",
-       "0    0.0  -1.0   1.0   6.0\n",
-       "0   -5.0  -7.0  -2.0  -3.0\n",
-       "0    3.0  -4.0   1.0  -1.0\n",
-       "0   43.0  30.0 -33.0 -23.0\n",
-       "0    1.0   3.0   2.0   7.0\n",
-       "..   ...   ...   ...   ...\n",
-       "0    7.0 -16.0  -3.0   7.0\n",
-       "0    3.0   1.0  -4.0  -1.0\n",
-       "0   -1.0   0.0  -5.0  -1.0\n",
-       "0   -9.0  -4.0   7.0   3.0\n",
-       "0   29.0 -47.0  -8.0  13.0\n",
+       "    val1   val2  val3  val4\n",
+       "0  -69.0 -398.0 -13.0 -75.0\n",
+       "0    2.0    5.0  -7.0 -17.0\n",
+       "0   13.0  -18.0  -5.0   7.0\n",
+       "0    0.0    1.0  -1.0  -4.0\n",
+       "0   47.0   10.0  14.0   3.0\n",
+       "..   ...    ...   ...   ...\n",
+       "0    3.0    8.0   4.0  11.0\n",
+       "0   -2.0    5.0  -3.0   7.0\n",
+       "0   -1.0    3.0   3.0 -10.0\n",
+       "0    1.0    9.0  -4.0 -35.0\n",
+       "0   -1.0    2.0   0.0  -1.0\n",
        "\n",
        "[10000 rows x 4 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,6 +367,7 @@
     "data = pd.DataFrame(cols)\n",
     "\n",
     "random.seed(59)\n",
+    "np.random.seed(59)\n",
     "\n",
     "for _ in range(10000):\n",
     "\n",
@@ -379,8 +382,9 @@
     "\n",
     "    cur_matrix = start_matrix\n",
     "\n",
+    "    cur_size = np.random.randint(0, 10) + 30\n",
     "\n",
-    "    a = np.random.randint(0, 3, size=30)\n",
+    "    a = np.random.randint(0, 3, size=cur_size)\n",
     "    for i in a: \n",
     "        if i==0:\n",
     "            cur_matrix = cur_matrix @ x\n",
@@ -401,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
